# cloud-devops-microservices

./: .env.example  .gitignore  .pre-commit-config.yaml  DEVELOPER_CHECKLIST.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: ci.yml  ecr-push.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_create_orders_table.py
docker/: Dockerfile  entrypoint.sh
src/cloud_devops_microservices/: app.py  config.py  crud.py  db.py  logging_config.py  main.py  models.py  schemas.py
src/cloud_devops_microservices/routers/: orders.py
terraform/: README.md  ec2.tf  main.tf  outputs.tf  provider.tf  user_data.sh  variables.tf
tests/: test_sample.py
