[metadata]
name = cloud-devops-microservices
version = 0.1.0
description = A minimal scaffold for cloud devops microservices
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[flake8]
max-line-length = 88
extend-ignore = E203, W503

[tool:pytest]
addopts = -ra -q
testpaths = tests
